refactor(search): use immutable structure to query fullTextSearch